force-app/main/default/objects/Quote_Detail__c/Quote_Detail__c.object-meta.xml
<CustomObject>
    <label>Quote Detail</label>
    <nameField>
        <displayFormat>QD-{000000}</displayFormat>
        <label>Quote Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>