force-app/main/default/objects/Quote_Detail__c/fields/BU_Profit_Rate__c.field-meta.xml
<CustomField>
    <fullName>BU_Profit_Rate__c</fullName>
    <label>BU Margin Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>