force-app/main/default/objects/Quote_Detail__c/fields/CIF_90_Days__c.field-meta.xml
<CustomField>
    <fullName>CIF_90_Days__c</fullName>
    <label>Quote Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>