force-app/main/default/objects/Quote_Detail__c/fields/CIF_90_Days_Without_Margin__c.field-meta.xml
<CustomField>
    <fullName>CIF_90_Days_Without_Margin__c</fullName>
    <label>Quote Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>