force-app/main/default/objects/Quote_Detail__c/fields/CIF_Price_Include_Commission__c.field-meta.xml
<CustomField>
    <fullName>CIF_Price_Include_Commission__c</fullName>
    <label>CIF Price Include Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>