force-app/main/default/objects/Quote_Detail__c/fields/Clearance_Cost_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Cost_Percentage__c</fullName>
    <label>Customs Clearance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>