force-app/main/default/objects/Quote_Detail__c/fields/Contract_Processing_Product__c.field-meta.xml
<CustomField>
    <fullName>Contract_Processing_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tolling Product</label>
    <referenceTo>Contract_Processing_Product__c</referenceTo>
    <relationshipLabel>Quote Detail</relationshipLabel>
    <relationshipName>Quote_Detail_Contract_Product</relationshipName>
    <type>Lookup</type>
</CustomField>