force-app/main/default/objects/Quote_Detail__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <label>Delivery Time</label>
    <type>Date</type>
</CustomField>