force-app/main/default/objects/Quote_Detail__c/fields/Is_Hand_Add__c.field-meta.xml
<CustomField>
    <fullName>Is_Hand_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Add Manually</label>
    <type>Checkbox</type>
</CustomField>