force-app/main/default/objects/Quote_Detail__c/fields/Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Price__c</fullName>
    <label>Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>