force-app/main/default/objects/Quote_Detail__c/fields/Order_Qnty__c.field-meta.xml
<CustomField>
    <fullName>Order_Qnty__c</fullName>
    <label>Order Qnty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>