force-app/main/default/objects/Quote_Detail__c/fields/Packing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Packing_Cost__c</fullName>
    <label>Packing Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>