force-app/main/default/objects/Quote_Detail__c/fields/Packing_Size__c.field-meta.xml
<CustomField>
    <fullName>Packing_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing Size</label>
    <referenceTo>Package_Data__c</referenceTo>
    <relationshipLabel>Quote Detail</relationshipLabel>
    <relationshipName>Quote_Detail_Packing_Size</relationshipName>
    <type>Lookup</type>
</CustomField>