force-app/main/default/objects/Quote_Detail__c/fields/Pallet__c.field-meta.xml
<CustomField>
    <fullName>Pallet__c</fullName>
    <label>Pallet Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>