force-app/main/default/objects/Quote_Detail__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product English Name</label>
    <referenceTo>Price_List__c</referenceTo>
    <relationshipLabel>Quote Detail</relationshipLabel>
    <relationshipName>Quote_Detail_Price_List</relationshipName>
    <type>Lookup</type>
</CustomField>