force-app/main/default/objects/Quote_Detail__c/fields/Process_Cost__c.field-meta.xml
<CustomField>
    <fullName>Process_Cost__c</fullName>
    <label>Tolling Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>